Fixed ScrollReveal flicker and added it for every 'Section' component.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,4 +19,5 @@ body {
 .section {
   margin-top: 128px;
   margin-bottom: 128px;
+  visibility: hidden;
 }
